added effects and videos

--- a/style.css
+++ b/style.css
@@ -22,7 +22,149 @@ body{
     
 }
 
+span{
+    font-size: 3rem;
+}
+
+.fire-anim {
+    position: relative;  
+    top: 50%; left: 50%;  
+    transform: translate(-50%, -50%); 
+    color: #f50909;
+    /* font-family: 'Archivo Black', sans-serif; */
+    font-family: 'Caesar Dressing', cursive;
+    font-size: 5vw;
+    font-weight: 800;
+    text-align: center;
+    /* letter-spacing: .1vw; */
+  }
+  
+  .fire {
+    position: relative; 
+    animation: animation 1s ease-in-out infinite alternate;
+    -moz-animation: animation 1s ease-in-out infinite alternate;
+    -webkit-animation: animation 1s ease-in-out infinite alternate;
+    -o-animation: animation 1s ease-in-out infinite alternate;
+  }
+  
+  .burn {
+    position: relative; 
+    animation: animation .65s ease-in-out infinite alternate;
+    -moz-animation: animation .65s ease-in-out infinite alternate;
+    -webkit-animation: animation .65s ease-in-out infinite alternate;
+    -o-animation: animation .65s ease-in-out infinite alternate;
+  }
+  
+  @keyframes animation {
+    0% {
+      text-shadow: 0 0 5px #fefcc9,
+        5px -5px 5px #feec85,
+        -10px -10px 10px #ffae34,
+        10px -20px 15px #ec760c,
+        -10px -30px 20px #cd4606,
+        0 -40px 25px #973716,
+        5px -45px 20px #451b0e; 
+    }
+  
+    100% {
+      text-shadow: 0 0 5px #fefcc9,
+        5px -5px 5px #fefcc9,
+        -10px -10px 10px #feec85,
+        11px -11px 20px #ffae34,
+        -11px -27px 15px #ec760c,
+        0 -41px 30px #cd4606,
+        5px -45px 30px #973716;
+      left: 0.5px;
+    }
+  }
+  
+  @-moz-keyframes animation {
+    0% {
+      text-shadow: 0 0 5px #fefcc9,
+        5px -5px 5px #feec85,
+        -10px -10px 10px #ffae34,
+        10px -20px 15px #ec760c,
+        -10px -30px 20px #cd4606,
+        0 -40px 25px #973716,
+        5px -45px 20px #451b0e; 
+    }
+  
+    100% {
+      text-shadow: 0 0 5px #fefcc9,
+        5px -5px 5px #fefcc9,
+        -10px -10px 10px #feec85,
+        11px -11px 20px #ffae34,
+        -11px -27px 15px #ec760c,
+        0 -41px 30px #cd4606,
+        5px -45px 30px #973716;
+      left: 0.5px;
+    }
+  }
+  
+  @-webkit-keyframes animation {
+    0% {
+      text-shadow: 0 0 5px #fefcc9,
+        5px -5px 5px #feec85,
+        -10px -10px 10px #ffae34,
+        10px -20px 15px #ec760c,
+        -10px -30px 20px #cd4606,
+        0 -40px 25px #973716,
+        5px -45px 20px #451b0e; 
+    }
+  
+    100% {
+      text-shadow: 0 0 5px #fefcc9,
+        5px -5px 5px #fefcc9,
+        -10px -10px 10px #feec85,
+        11px -11px 20px #ffae34,
+        -11px -27px 15px #ec760c,
+        0 -41px 30px #cd4606,
+        5px -45px 30px #973716;
+      left: 0.5px;
+    }
+  }
+  
+  @-o-keyframes animation {
+    0% {
+      text-shadow: 0 0 5px #fefcc9,
+        5px -5px 5px #feec85,
+        -10px -10px 10px #ffae34,
+        10px -20px 15px #ec760c,
+        -10px -30px 20px #cd4606,
+        0 -40px 25px #973716,
+        5px -45px 20px #451b0e; 
+    }
+  
+    100% {
+      text-shadow: 0 0 5px #fefcc9,
+        5px -5px 5px #fefcc9,
+        -10px -10px 10px #feec85,
+        11px -11px 20px #ffae34,
+        -11px -27px 15px #ec760c,
+        0 -41px 30px #cd4606,
+        5px -45px 30px #973716;
+      left: 0.5px;
+    }
+  }
+
+
+  #fire-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Videoyu tüm alanı doldurmasını sağlayın */
+    z-index: -1; /* Videoyu metnin arkasına yerleştirin */
+}
 
 
 
+/* .col-12 > .mt-5 {
+  display: none; 
+}
+ */
+ 
+
+  
 
